# micellia

./: .gitignore  CLAUDE.md  Copia de Plan de Negocios Micelia_ Estrategia y Clientes.docx  INTEGRACION.md  PIZARRA.md  README.md
.agents/: AGENTS.md  skills.json
.claude/: settings.local.json
Documentos Micelia/: Copia de Plan de Negocios Micelia: Estrategia y Clientes.docx  Copia de Plan de Negocios Micelia_ Estrategia y Clientes.docx (Converted - 2026-07-17 01:32).docx  biologia_hongo_ostra.md  compendio_nutricional.md  dossier_tecnico_micelia.md  economia_circular.md  guia_autocultivo.md  telemetria_s60.md
Documentos Micelia/Publi_pend/: Cómo cocinar hongo ostra.txt  Cómo elegir un buen hongo.txt  Cómo sabe el hongo ostra.txt  El hongo ostra tiene proteínas.txt  Por qué el hongo ostra.txt  Puede el hongo ostra reemplazar.txt  Qué es el hongo ostra.txt
system/: Cargo.toml  Makefile  implementation_plan.md
system/cortex/: Cargo.toml
system/cortex/src/: lib.rs  main.rs
system/dashboard/: admin.html  app.js  biblioteca.html  dossier.html  index.html  public.css  public.js  robots-host.txt  robots.txt  sitemap.xml  style.css  tour.js  view_doc.html  view_lote.html
system/dashboard/docs/: alim_beneficios_nutri.md  alim_como_cocinarlo.md  alim_como_elegir.md  alim_como_sabe.md  alim_que_es_hongo.md  alim_reemplazo_carne.md  alim_tiene_proteinas.md  arquitectura_servidor.md  biologia_hongo_ostra.md  (+28 more)
system/deployment/: issue_ssl.sh  setup_multi_production.sh
system/docs/: quality_protocol.md
system/firmware/: Cargo.toml
system/s60/: Cargo.toml
(+43 files in other folders)
